<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMeAndroid</string>
    <string name="perfil">Perfil</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Configurações</string>
    <string name="app_id">349060965181569</string>
    <string name="find_girls">Find Girls</string>
    <string name="find_boys">Find Boys</string>
    <string name="find_all">Find All</string>
    <string name="find_friends">Find Friends</string>
    <string name="sair">Log Out</string>
    <string name="new_photo">Nova Foto</string>
    <string name="gallery">Galeria</string>
    <string name="profile_confirma">Confirmar</string>
    <string name="sinc">Sincronizar</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="logando">Logando#8230</string>
    <string name="loading">Carregando#8230</string>
    <string name="loginFB">Logar com Facebook</string>
    <string name="loginFind">Logar com FindMe</string>
    <string name="title_activity_chatting_room">Chatting Room</string>
    <string name="action_settings">Settings</string>
    <string name="bt_enviar">Enviar</string>
    <string name="alert_unavailable_gps_title">GPS Desabilitado</string>
    <string name="alert_unavailable_gps_message">Este app utiliza o GPS, por favor habilite-o</string>
    

</resources>